--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-portable-text": "^0.6.0",
     "sanity": "^3.14.4",
     "styled-components": "5.2",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
